cursor animation added

--- a/src/products.html
+++ b/src/products.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;600;700&display=swap" rel="stylesheet">
     <!-- <script src="https://rawgit.com/peacepostman/wavify/master/wavify.js"></script> -->
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
 </head>
 
 <body>
@@ -53,7 +54,7 @@
     <div id="viewport">
         <div id="scroll-container">
             <main>
-                <h1>About Page</h1>
+
             </main>
             <footer></footer>
         </div>
