--- a/src/blogs.html
+++ b/src/blogs.html
@@ -36,12 +36,12 @@
                         </button>
                         <div class="menu" id="menu">
                             <ul class="menu-inner">
-                                <li class="menu-item active"> <a href="/" class="menu-link">Home</a> </li>
+                                <li class="menu-item "> <a href="/" class="menu-link">Home</a> </li>
                                 <li class="menu-item"> <a href="about.html" class="menu-link">About</a> </li>
                                 <li class="menu-item"> <a href="products.html" class="menu-link">Product</a> </li>
                                 <li class="menu-item"> <a href="careers.html" class="menu-link">Careers</a> </li>
                                 <li class="menu-item"> <a href="contact.html" class="menu-link">Contact</a> </li>
-                                <li class="menu-item"> <a href="blogs.html" class="menu-link">Blog</a> </li>
+                                <li class="menu-item active"> <a href="blogs.html" class="menu-link">Blog</a> </li>
                             </ul>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
     <div id="viewport">
         <div id="scroll-container">
             <main>
-                <h1>About Page</h1>
+                <h1>BLOG</h1>
             </main>
             <footer></footer>
         </div>
