--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,6 @@
         </div>
     </div> -->
 
-
     <header id="header" class="header">
         <div class="promo-banner">
             <div class="container">
@@ -59,6 +58,41 @@
     <div id="viewport">
         <div id="scroll-container">
             <main>
+                <section class="sec auto-height">
+                    <div class="container">
+                        <div class="sec_hero">
+                            <div class="left_text">
+                                <h1>Best in the <span>Beauty</span></h1>
+                                <h6>Question for everyone</h6>
+                            </div>
+
+                            <div class="hero_img">
+                                <div class="slider">
+                                    <div class="item">
+                                        <div class="item_img">
+                                            <!-- <img src="https://www.micelistudios.com/sandbox/scrolltrigger/imgs/burrrowing_owl_674x700.jpg" alt=""> -->
+                                        </div>
+                                        <div class="line"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- FACE EYES -->
+                <section class="sec auto-height">
+                    <div class="container">
+                        <div class="faces">
+                            <div class="face" id="face">
+                                <div class="eyes">
+                                    <div class="eye"></div>
+                                    <div class="eye"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- CARDS -->
                 <section class="sec">
                     <div class="container">
                         <div class="cards">
@@ -78,17 +112,15 @@
                             </div>
                             <div class="card">
                                 <div class="cont">
-
                                     <h4>Card Title</h4>
-                                    <div class="img">
-
-                                    </div>
+                                    <div class="img"> </div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, sunt cum impedit iusto necessitatibus a placeat at quaerat, inventore quas quod,</p>
                                     <div class="cta">
                                         <button class="btn capsule icon">
-                                <span class="btn-lable"> Button</span>
-                                <span class="btn-icon"> <img src="./images/icons/arrow-right.svg" alt=""> </span>
-                            </button>
+                                            <span class="btn-lable"> Button</span>
+                                            <span class="btn-icon"> <img src="./images/icons/arrow-right.svg" alt=""> 
+                                            </span>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -111,19 +143,44 @@
                         </div>
                     </div>
                 </section>
-
+                <!-- 3D card movement -->
+                <section class="sec auto-height">
+                    <div class="container">
+                        <div class="card-wrapper elem" style="transform: perspective(600px) rotateY(0deg) rotateX(0deg);">
+                            <div class="bloc">
+                                <div class="content content1">
+                                    <p>Title</p>
+                                    <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet</p>
+                                </div>
+                                <div class="content content2">
+                                    Header text
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="sec" data-type="horizontal" style="overflow-x: hidden;">
+                    <div class="section__cards">
+                        <div class="section__card">
+                            <h1 class="section__title">Section 3a</h1>
+                        </div>
+                        <div class="section__card">
+                            <h1 class="section__title">Section 3b</h1>
+                        </div>
+                        <div class="section__card">
+                            <h1 class="section__title">Section 3c</h1>
+                        </div>
+                    </div>
+                </section>
                 <section>
                     <div class="title titleGreathorned"><span>The great horned owl</span> also known as the tiger owl or the hoot owl, is a large owl native to the Americas.</div>
                 </section>
 
-
                 <section class="cluster clusterGreat">
                     <div class="circle clusterPieces"></div>
-
                     <div class="owlHorned clusterPieces"><img src="https://www.micelistudios.com/sandbox/scrolltrigger/imgs/great_horned_owl.jpg" />
                         <div class="caption"><span>/01</span> GREAT HORNED OWL</div>
                     </div>
-
                     <img class="dotsBlue clusterPieces" src="https://www.micelistudios.com/sandbox/scrolltrigger/imgs/dots_blue_494x434.svg" />
                 </section>
 
@@ -131,16 +188,12 @@
                     <div class="title titleBurrowing"><span>The burrowing owl</span> is a small, long-legged owl found throughout open landscapes of North and South America.</div>
                 </section>
 
-
                 <section class="cluster clusterBurrowing">
                     <img class="clusterPieces triangle" src="https://www.micelistudios.com/sandbox/scrolltrigger/imgs/triangle_448x446.svg">
-
                     <div class="clusterPieces owlBurrowing"><img src="https://www.micelistudios.com/sandbox/scrolltrigger/imgs/burrrowing_owl_674x700.jpg">
                         <div class="caption captionBurrowing"><span>/02</span> BURROWING OWL</div>
                     </div>
-
                     <img class="clusterPieces dotsWhite" src="https://www.micelistudios.com/sandbox/scrolltrigger/imgs/dots_white_310x588.svg">
-
                 </section>
 
                 <section class="spcr300"></section>
