testing code added

--- a/src/about.html
+++ b/src/about.html
@@ -14,12 +14,6 @@
 </head>
 
 <body>
-    <div class='loader df aic jcc'>
-        <div>
-            <h1>Loading</h1>
-            <h2 class='loader--text'>0%</h2>
-        </div>
-    </div>
     <header id="header" class="header">
         <div class="container">
 
@@ -49,15 +43,43 @@
             </nav>
         </div>
     </header>
-
     <div id="viewport">
         <div id="scroll-container">
             <main>
-                <h1>About Page</h1>
+                <section class="sec section-01">
+                    <div class="all-circls">
+                        <div class="prod-circle green-crl"></div>
+                        <div class="prod-circle yellow-crl"></div>
+                        <div class="prod-circle blue-crl"></div>
+                    </div>
+                </section>
+                <section class="sec full section-02"></section>
+                <section class="sec full">
+                    <div class="container22">
+                        <div class="img-container">
+                            <img class="clip-svg unsplash-img" src="https://images.unsplash.com/photo-1665510394335-a6453ce125c7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1964&q=80" alt="" />
+                            <svg width="500" height="385" viewBox="0 0 500 385" fill="none" xmlns="http://www.w3.org/2000/svg">                                
+                                <defs>
+                                    <clipPath id="myClip">
+                                            <path d="M34.1743 259.191C-89.6255 112.003 151.969 5.11668 296.325 0.110315C440.681 -4.89605 505.93 161.566 499.578 281.72C493.226 401.873 188.924 443.176 34.1743 259.191Z" fill="white"/>
+                            </clipPath>
+                            </defs>
+                            </svg>
+                        </div>
+                    </div>
+                </section>
+                <section class="sec full img-sec">
+                    <div class="bg-img-container">
+                        <img class="bg-img" src="https://images.unsplash.com/photo-1665510394335-a6453ce125c7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1964&q=80" alt="" />
+                    </div>
+                </section>
+                <section class="sec full"></section>
             </main>
             <footer></footer>
         </div>
     </div>
+    <!-- SCRIPT -->
+    <script src='https://unpkg.com/splitting@1.0.5/dist/splitting.min.js'></script>
 </body>
 
 </html>
