--- a/src/careers.html
+++ b/src/careers.html
@@ -14,12 +14,6 @@
 </head>
 
 <body>
-    <div class='loader df aic jcc'>
-        <div>
-            <h1>Loading</h1>
-            <h2 class='loader--text'>0%</h2>
-        </div>
-    </div>
     <header id="header" class="header">
         <div class="container">
 
@@ -49,15 +43,76 @@
             </nav>
         </div>
     </header>
-
     <div id="viewport">
         <div id="scroll-container">
             <main>
-                <h1>About Page</h1>
+                <section class="sec career-sec01">
+                    <svg id="js-svg-path" width="375" height="554" viewBox="0 0 375 554" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path id="js-path" d="M374 553V168.136V1H1V232.5H268.688V293" stroke="#BEBEBE" stroke-linecap="round"/>
+                        </svg>
+                    <div id="js-ball" class="ball"></div>
+                    <div class="mascot">
+                        <div class="faces">
+                            <div class="face" id="mascot-face">
+                                <div class="eyes">
+                                    <div class="eye"></div>
+                                    <div class="eye"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="sec full career-sec02">
+                    <div class="scroll2">
+                        <div class="img-holder">
+                            <img src="./images/dit.png" alt="">
+                        </div>
+                        <div>
+                            Lorem Ipsum Dummy text to be pasted over this area. Lorem Ipsum Dummy text to be pasted over this area.
+                        </div>
+                    </div>
+                    <div class="scroll2 reverce">
+                        <div>
+                            Lorem Ipsum Dummy text to be pasted over this area. Lorem Ipsum Dummy text to be pasted over this area.
+                        </div>
+                        <div class="img-holder">
+                            <img src="./images/playnlearn.png" alt="">
+                        </div>
+                    </div>
+                    <div class="scroll2">
+                        <div class="img-holder">
+                            <img src="./images/valu-prop.png" alt="">
+                        </div>
+                        <div>
+                            Lorem Ipsum Dummy text to be pasted over this area. Lorem Ipsum Dummy text to be pasted over this area.
+                        </div>
+                    </div>
+                </section>
+                <section class="sec full career-sec03">
+                    <div>
+                        <div class="text-one">WHAT </div>
+                        <div class="text-two">DO WE DO?</div>
+                        <div class="text-three">We help children learn, through ways that they understand best</div>
+                    </div>
+                </section>
+                <section class="sec full career-sec04">
+                    <div>
+                        <h1>How to play with your kid, by teach maths ?</h1>
+                        <p>Lorem Ipsum Dummy text to be pasted over this area.... </p>
+                        <button>Know more</button>
+                    </div>
+                    <div>
+                        <h1>How to play with your kid, by teach maths ?</h1>
+                        <p>Lorem Ipsum Dummy text to be pasted over this area.... </p>
+                        <button>Know more</button>
+                    </div>
+                </section>
             </main>
             <footer></footer>
         </div>
     </div>
+    <!-- SCRIPT -->
+    <script src='https://unpkg.com/splitting@1.0.5/dist/splitting.min.js'></script>
 </body>
 
 </html>
