--- a/src/index.html
+++ b/src/index.html
@@ -41,12 +41,12 @@
                         </button>
                         <div class="menu" id="menu">
                             <ul class="menu-inner">
-                                <li class="menu-item"> <a href="/" class="menu-link">Home</a> </li>
-                                <li class="menu-item"> <a href="about.html" class="menu-link">About</a> </li>
-                                <li class="menu-item"> <a href="products.html" class="menu-link">Product</a> </li>
-                                <li class="menu-item"> <a href="careers.html" class="menu-link">Careers</a> </li>
-                                <li class="menu-item"> <a href="contact.html" class="menu-link">Contact</a> </li>
-                                <li class="menu-item active"> <a href="blogs.html" class="menu-link">Blog</a> </li>
+                                <li class="menu-item"> <a href="#one" class="menu-link active">Home</a> </li>
+                                <li class="menu-item"> <a href="#two" class="menu-link">About</a> </li>
+                                <li class="menu-item"> <a href="#three" class="menu-link">Product</a> </li>
+                                <li class="menu-item"> <a href="#four" class="menu-link">Careers</a> </li>
+                                <li class="menu-item"> <a href="#five" class="menu-link">Contact</a> </li>
+                                <!-- <li class="menu-item"> <a href="blogs.html" class="menu-link">Blog</a> </li> -->
                             </ul>
                         </div>
                     </div>
@@ -58,7 +58,49 @@
     <div id="viewport">
         <div id="scroll-container">
             <main>
-                <section class="sec auto-height">
+                <section id="one" class="sec full hero-banner hero-bg ">
+                    <div class="container hero-slider">
+                        <!-- Slider main container -->
+                        <div class="swiper">
+                            <!-- Additional required wrapper -->
+                            <div class="swiper-wrapper">
+                                <!-- Slides -->
+                                <div class="swiper-slide">
+                                    <div class="inner">
+                                        <h1>Slide 1</h1>
+                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id sed, consequatur consectetur consequuntur totam ullam commodi nesciunt? Vel provident nostrum libero ex, accusantium illo, possimus eius, tempore quasi
+                                            debitis dolorem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="inner">
+                                        <h1>Slide 2</h1>
+                                        <p> Id sed, consequatur consectetur consequuntur totam ullam commodi nesciunt? Vel provident nostrum libero ex, accusantium illo, possimus eius, tempore quasi debitis dolorem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="inner">
+
+                                        <h1>Slide 3</h1>
+                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- If we need pagination -->
+                            <div class="swiper-pagination"></div>
+
+                            <!-- If we need navigation buttons -->
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-next"></div>
+
+                            <!-- If we need scrollbar -->
+                            <div class="swiper-scrollbar"></div>
+                        </div>
+                    </div>
+                </section>
+                <section id="two" class="sec">
                     <div class="container">
                         <div class="sec_hero">
                             <div class="left_text">
@@ -80,7 +122,7 @@
                     </div>
                 </section>
                 <!-- FACE EYES -->
-                <section class="sec auto-height">
+                <section id="three" class="sec auto-height">
                     <div class="container">
                         <div class="faces">
                             <div class="face" id="face">
@@ -93,7 +135,7 @@
                     </div>
                 </section>
                 <!-- CARDS -->
-                <section class="sec">
+                <section id="four" class="sec">
                     <div class="container">
                         <div class="cards">
                             <div class="card">
@@ -144,8 +186,8 @@
                     </div>
                 </section>
                 <!-- 3D card movement -->
-                <section class="sec auto-height">
-                    <div class="container">
+                <section id="five" class="sec ">
+                    <div class="container" style="height: 100vh;">
                         <div class="card-wrapper elem" style="transform: perspective(600px) rotateY(0deg) rotateX(0deg);">
                             <div class="bloc">
                                 <div class="content content1">
