--- a/src/index.html
+++ b/src/index.html
@@ -41,11 +41,11 @@
                         </button>
                         <div class="menu" id="menu">
                             <ul class="menu-inner">
-                                <li class="menu-item"> <a href="#one" class="menu-link active">Home</a> </li>
-                                <li class="menu-item"> <a href="#two" class="menu-link">About</a> </li>
-                                <li class="menu-item"> <a href="#three" class="menu-link">Product</a> </li>
-                                <li class="menu-item"> <a href="#four" class="menu-link">Careers</a> </li>
-                                <li class="menu-item"> <a href="#five" class="menu-link">Contact</a> </li>
+                                <li class="menu-item"> <a href="./index.html" class="menu-link active">Home</a> </li>
+                                <li class="menu-item"> <a href="./about.html" class="menu-link">About</a> </li>
+                                <li class="menu-item"> <a href="./products.html" class="menu-link">Product</a> </li>
+                                <li class="menu-item"> <a href="./careers.html" class="menu-link">Careers</a> </li>
+                                <li class="menu-item"> <a href="./contact.html" class="menu-link">Contact</a> </li>
                                 <!-- <li class="menu-item"> <a href="blogs.html" class="menu-link">Blog</a> </li> -->
                             </ul>
                         </div>
@@ -189,7 +189,19 @@
                 <section id="five" class="sec ">
                     <div class="container" style="height: 100vh;">
                         <div class="card-wrapper elem" style="transform: perspective(600px) rotateY(0deg) rotateX(0deg);">
-                            <div class="bloc">
+                            <div class="block">
+                                <div class="content content1">
+                                    <p>Title</p>
+                                    <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet</p>
+                                </div>
+                                <div class="content content2">
+                                    Header text
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="card-wrapper elem red-box" style="transform: perspective(600px) rotateY(0deg) rotateX(0deg);">
+                            <div class="block">
                                 <div class="content content1">
                                     <p>Title</p>
                                     <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet</p>
@@ -240,7 +252,9 @@
 
                 <section class="spcr300"></section>
             </main>
-            <footer></footer>
+            <footer>
+
+            </footer>
         </div>
     </div>
 
